# agent-handoff

./: .agent-handoff.yml  .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.agent-handoff/: decisions.md  index.json  preferences.md  project.md  session.md
.agents/skills/agent-handoff/: SKILL.md
docs/plans/: 2026-05-07-agent-handoff-design.md  2026-05-07-agent-handoff-implementation.md  2026-05-08-typescript-port-design.md  2026-05-08-typescript-port-implementation.md  2026-05-08-v0.5-enable-first-design.md  2026-05-08-vault-first-design.md  2026-05-08-vault-first-implementation.md
resources/: agent-handoff.SKILL.md
src/: bin.ts  cli.ts  core.ts  index.ts
src/agent_handoff/: __init__.py  cli.py  core.py
src/agent_handoff/resources/: __init__.py
tests/: cli.test.ts  core.test.ts  skill-install-copy.test.ts  test_cli.py  test_core.py
