[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-handoff"
version = "0.1.0"
description = "Repo-local handoff files for Codex and Claude Code."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "agent-handoff contributors" }
]
keywords = ["ai", "agents", "codex", "claude-code", "handoff", "context"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.scripts]
agent-handoff = "agent_handoff.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
